--- a/app/src/main/res/layout/activity_new_request_page.xml
+++ b/app/src/main/res/layout/activity_new_request_page.xml
@@ -174,7 +174,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/buttonSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
