--- a/app/src/main/res/layout/activity_request_dashboard.xml
+++ b/app/src/main/res/layout/activity_request_dashboard.xml
@@ -7,11 +7,11 @@
     tools:context=".RequestDashboard">
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/buttonCant2"
         android:layout_width="74dp"
         android:layout_height="35dp"
-        android:layout_alignStart="@+id/button4"
-        android:layout_alignLeft="@+id/button4"
+        android:layout_alignStart="@+id/buttonAccept1"
+        android:layout_alignLeft="@+id/buttonAccept1"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="3dp"
         android:layout_marginLeft="3dp"
@@ -20,7 +20,7 @@
         android:text="I Can't" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/buttonCant1"
         android:layout_width="74dp"
         android:layout_height="35dp"
         android:layout_alignParentTop="true"
@@ -93,7 +93,7 @@
         android:layout_alignLeft="@+id/textView4" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonAccept1"
         android:layout_width="74dp"
         android:layout_height="35dp"
         android:layout_alignParentTop="true"
@@ -108,11 +108,11 @@
         android:layout_marginLeft="3dp" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/buttonAccept2"
         android:layout_width="74dp"
         android:layout_height="35dp"
-        android:layout_alignStart="@+id/button4"
-        android:layout_alignLeft="@+id/button4"
+        android:layout_alignStart="@+id/buttonAccept1"
+        android:layout_alignLeft="@+id/buttonAccept1"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="3dp"
         android:layout_marginLeft="3dp"
@@ -123,7 +123,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="90dp"
         android:layout_height="311dp"
-        android:layout_below="@+id/button10"
+        android:layout_below="@+id/buttonCant1"
         android:layout_alignStart="@+id/textView4"
         android:layout_marginStart="-115dp"
         android:layout_marginTop="-74dp" />
