--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -90,65 +90,6 @@
         android:background="?android:attr/listDivider"
         android:visibility="visible" />
 
-    <Button
-        android:id="@+id/buttonAcceptItem1"
-        android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:layout_alignEnd="@+id/textViewNeededPeople"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="209dp"
-        android:background="@android:color/darker_gray"
-        android:text="accep"
-        android:textSize="12sp" />
-
-    <Button
-        android:id="@+id/buttonCancelItem1"
-        android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:layout_alignEnd="@+id/textViewNeededPeople"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="62dp"
-        android:layout_marginBottom="174dp"
-        android:background="@android:color/holo_red_dark"
-        android:text="i can't"
-        android:textSize="12sp" />
-
-    <Button
-        android:id="@+id/buttonAcceptButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:layout_alignEnd="@+id/textViewNeededPeople"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="141dp"
-        android:background="@android:color/darker_gray"
-        android:text="accept"
-        android:textSize="12sp" />
-
-    <Button
-        android:id="@+id/buttonCancelButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:layout_alignEnd="@+id/textViewNeededPeople"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="109dp"
-        android:background="@android:color/holo_red_dark"
-        android:text="i can't"
-        android:textSize="12sp" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/dynamicRequestList"
-        android:layout_width="57dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonCancelItem1"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginBottom="-147dp" />
-
     <Switch
         android:id="@+id/switchItem1"
         android:layout_width="wrap_content"
@@ -169,5 +110,15 @@
         android:layout_marginEnd="34dp"
         android:layout_marginRight="34dp"
         android:layout_marginBottom="166dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="85dp"
+        android:layout_height="162dp"
+        android:layout_alignTop="@+id/switchItem2"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="34dp"
+        android:layout_marginLeft="34dp"
+        android:layout_marginTop="-32dp" />
 
 </RelativeLayout>
