--- a/app/src/main/res/layout/activity_manual_donation_page.xml
+++ b/app/src/main/res/layout/activity_manual_donation_page.xml
@@ -14,9 +14,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="147dp"
-        android:layout_marginLeft="147dp"
-        android:layout_marginTop="185dp"
+        android:layout_marginStart="149dp"
+        android:layout_marginLeft="149dp"
+        android:layout_marginTop="262dp"
         android:layout_marginBottom="0dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown" />
@@ -91,22 +91,34 @@
         android:layout_width="164dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="190dp"
-        android:layout_marginEnd="-114dp"
+        android:layout_marginTop="269dp"
+        android:layout_marginEnd="-110dp"
+        android:layout_marginRight="-110dp"
         android:layout_toStartOf="@+id/buttonClear"
+        android:layout_toLeftOf="@+id/buttonClear"
         android:text="Location"
-        android:textSize="24sp"
-        android:layout_marginRight="-114dp"
-        android:layout_toLeftOf="@+id/buttonClear" />
+        android:textSize="24sp" />
 
     <Button
-        android:id="@+id/buttonShowDate"
-        android:layout_width="218dp"
+        android:id="@+id/buttonDatePicker"
+        android:layout_width="213dp"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/buttonSubmit"
         android:layout_alignBottom="@+id/textDate"
-        android:layout_marginEnd="-58dp"
-        android:layout_marginBottom="-7dp"
-        android:text="Pick Date" />
+        android:layout_marginEnd="-55dp"
+        android:layout_marginBottom="0dp"
+        android:text="Pick a date"
+        android:layout_alignRight="@+id/buttonSubmit"
+        android:layout_marginRight="-55dp" />
+
+    <TextView
+        android:id="@+id/textViewShowDate"
+        android:layout_width="215dp"
+        android:layout_height="52dp"
+        android:layout_alignStart="@+id/spinnerLocation"
+        android:layout_alignLeft="@+id/spinnerLocation"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="191dp"
+        android:textSize="18sp" />
 
 </RelativeLayout>
