--- a/app/src/main/res/layout/activity_request_status_page.xml
+++ b/app/src/main/res/layout/activity_request_status_page.xml
@@ -64,7 +64,6 @@
         android:layout_marginStart="-2dp"
         android:layout_marginLeft="-2dp"
         android:layout_marginTop="92dp"
-        android:text="32"
         android:textColor="@color/design_default_color_primary"
         android:textSize="36sp"
         tools:layout_editor_absoluteX="108dp"
@@ -101,7 +100,7 @@
         tools:layout_editor_absoluteY="181dp" />
 
     <TextView
-        android:id="@+id/textViewPeopleDonated"
+        android:id="@+id/textViewJustWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/buttonRefresh"
@@ -110,7 +109,7 @@
         android:layout_marginTop="211dp"
         android:layout_marginEnd="47dp"
         android:layout_marginRight="47dp"
-        android:text="(0 have donated before)"
+        android:text="have donated before"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="108dp"
@@ -142,7 +141,6 @@
         android:layout_marginTop="158dp"
         android:layout_toEndOf="@+id/textViewPeopleNotified"
         android:layout_toRightOf="@+id/textViewPeopleNotified"
-        android:text="0"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="36sp"
         tools:layout_editor_absoluteX="108dp"
@@ -203,5 +201,14 @@
         android:text=""
         android:layout_alignRight="@+id/textViewPeopleDonated2"
         android:layout_marginRight="4dp" />
+
+    <TextView
+        android:id="@+id/textViewPeopleDonatedBefore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/textViewPeopleDonated2"
+        android:layout_alignBottom="@+id/textViewJustWord"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="3dp" />
 
 </RelativeLayout>
