--- a/app/src/main/res/layout/layout_listhome.xml
+++ b/app/src/main/res/layout/layout_listhome.xml
@@ -1,47 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:id="@+id/parent_layout" android:padding = "30dp">
 
     <TextView
         android:id="@+id/textViewLocation"
-        android:layout_width="135dp"
-        android:layout_height="46dp"
-        android:layout_alignBottom="@+id/textViewRequest"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="221dp"
-        android:layout_marginLeft="221dp"
-        android:layout_marginBottom="-54dp"
+        android:layout_width="162dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewPosting"
+        android:layout_alignStart="@+id/textViewPosting"
         android:text="Location"
         android:textColor="#000"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/textViewposting"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewPosting"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textViewLocation"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginRight="162dp"
         android:text="Posting Time"
         android:textColor="#000"
         android:textSize="18sp" />
 
 
-    <TextView
-        android:id="@+id/textViewRequest"
+    <Button
+        android:id="@+id/buttonStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="30dp"
-        android:text="Request "
-        android:textColor="#000"
-        android:textSize="18sp" />
+        android:layout_marginStart="200dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginBottom="8dp"
+        android:text="Status" />
 
 </RelativeLayout>
