--- a/app/src/main/res/layout/activity_extend_request_page.xml
+++ b/app/src/main/res/layout/activity_extend_request_page.xml
@@ -26,25 +26,25 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="55dp"
-        android:layout_marginLeft="55dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginLeft="54dp"
+        android:layout_marginBottom="84dp"
         android:background="@android:color/holo_green_dark"
         android:text="Extend for another 24 hours"
         android:textColor="@android:color/background_light" />
 
     <Button
-        android:id="@+id/buttonCloseRequest"
+        android:id="@+id/buttonReturnToRequestStatus"
         android:layout_width="276dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="54dp"
-        android:layout_marginLeft="54dp"
-        android:layout_marginBottom="37dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginBottom="28dp"
         android:background="@android:color/darker_gray"
-        android:text="Close this request"
+        android:text="Return to Request Status"
         android:textColor="@android:color/background_light" />
 
     <TextView
@@ -58,20 +58,6 @@
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         tools:text="Patient Name" />
-
-    <TextView
-        android:id="@+id/textViewExpireTime"
-        android:layout_width="78dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="76dp"
-        android:layout_marginRight="76dp"
-        android:layout_marginBottom="318dp"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        tools:text="Time" />
 
     <TextView
         android:id="@+id/textView18"
